infra-platforms/kubernetes/databases/sql/postgresql/postgresql-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgresql-ns
  labels:
    istio-injection: enabled
